--- a/index.html
+++ b/index.html
@@ -19,6 +19,26 @@
     <img class="promo__potter" src="/src/img/promo/potter.jpg" alt="potter">
     <div class="container">
       <div class="header">
+        <div class="header__menu header__menu-active">
+          <div class="header__menu-close">
+            <span></span>
+            <span></span>
+          </div>
+          <nav class="header__menu-nav">
+            <ul>
+              <li>
+                <a href="#" class="header__menu-link">catalog</a>
+              </li>
+              <li>
+                <a href="#" class="header__menu-link">blog</a>
+              </li>
+              <li>
+                <a href="#" class="header__menu-link">about</a>
+              </li>
+            </ul>
+
+          </nav>
+        </div>
         <div class="header__top">
           <div class="burger">
             <span></span>
@@ -119,7 +139,7 @@
                 <input required class="form__input" placeholder="Email" id="email" name="email" type="email">
               </div>
             </fieldset>
-            <label class="form__label" for="text">Your question</label>
+            <label class="form__label mt-8" for="text">Your question</label>
             <textarea class="form__textarea" placeholder="Question" name="text" id="text"></textarea>
             <label class="form__label form__ceck-block" for="checkbox">
               <input required class="form__checkbox" id="checkbox" type="checkbox">
@@ -163,6 +183,73 @@
       </div>
     </div>
   </section>
+
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__wrap">
+        <div class="footer__block-one">
+          <h4 class="title-footer-h4">newsletter</h4>
+          <p class="footer__subtitle">
+            Keep up to date with news and promotions
+          </p>
+          <form action="#" class="footer__input">
+            <input class="footer__form" type="email" required name="email" placeholder="Enter your e-mail" />
+            <label class="footer__label form__label form__ceck-block " for="checkbox">
+              <input required class="form__checkbox footer__checkbox" id="checkbox" type="checkbox">
+              I agree with the <a href="#">terms</a>
+            </label>
+            <button class="btn-submit">submit</button>
+          </form>
+        </div>
+        <div class="pure-g footer__wrapper">
+          <div class="pure-u-1-4 pure-u-md-1-5 footer__wrapper-item">
+            <h4 class="title-footer-h4">discover</h4>
+            <ul class="footer__wrapper-list">
+              <li>
+                <a href="#">About Us</a>
+              </li>
+              <li>
+                <a href="#">Blog</a>
+              </li>
+            </ul>
+          </div>
+          <div class="pure-u-1-4 pure-u-md-1-5 footer__wrapper-item">
+            <h4 class="title-footer-h4">shopping</h4>
+            <ul class="footer__wrapper-list">
+              <li>
+                <a href="#">Catalog</a>
+              </li>
+            </ul>
+          </div>
+          <div class="pure-u-1-1 pure-u-md-1-5 footer__wrapper-item footer__mod">
+            <h4 class="title-footer-h4">information</h4>
+            <ul class="footer__wrapper-list">
+              <li>
+                <a href="#">Terms and Conditions</a>
+              </li>
+            </ul>
+          </div>
+          <div class="pure-u-1-1 pure-u-md-2-5 footer__wrapper-item footer__mod">
+            <h4 class="title-footer-h4">follow us</h4>
+            <ul class="footer__wrapper-social-link">
+              <li>
+                <a class="icon-facebook" href="#"></a>
+              </li>
+              <li>
+                <a class="icon-instagram" href="#"></a>
+              </li>
+              <li>
+                <a class="icon-pinterest-circled" href="#"></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <p class="footer__info">
+        © Copyright 2025, Ceramic soul
+      </p>
+    </div>
+  </footer>
 
 
   <script type="module" src="/src/js/script.js"></script>
