added new file catalog.html, and added in this file section with tabs

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <img class="promo__potter" src="/src/img/promo/potter.jpg" alt="potter">
     <div class="container">
       <div class="header">
-        <div class="header__menu header__menu-active">
+        <div class="header__menu">
           <div class="header__menu-close">
             <span></span>
             <span></span>
@@ -27,7 +27,7 @@
           <nav class="header__menu-nav">
             <ul>
               <li>
-                <a href="#" class="header__menu-link">catalog</a>
+                <a href="catalog.html" class="header__menu-link">catalog</a>
               </li>
               <li>
                 <a href="#" class="header__menu-link">blog</a>
@@ -56,7 +56,7 @@
         <nav class="header__nav">
           <ul>
             <li>
-              <a href="#" class="header__link">
+              <a href="catalog.html" class="header__link">
                 catalog
               </a>
             </li>
@@ -217,7 +217,7 @@
             <h4 class="title-footer-h4">shopping</h4>
             <ul class="footer__wrapper-list">
               <li>
-                <a href="#">Catalog</a>
+                <a href="catalog.html">Catalog</a>
               </li>
             </ul>
           </div>
