added section with cards and adapted for mobile devices

--- a/catalog.html
+++ b/catalog.html
@@ -2,163 +2,269 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Website for Ceramic soul brand" />
-    <meta name="author" content="Awesome student" />
-    <title>Catalog</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,400;0,500;1,400&display=swap"
-        rel="stylesheet" />
+   <meta charset="UTF-8" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <meta name="description" content="Website for Ceramic soul brand" />
+   <meta name="author" content="Awesome student" />
+   <title>Catalog</title>
+   <link rel="icon" type="image/x-icon" href="favicon.ico" />
+   <link rel="preconnect" href="https://fonts.googleapis.com" />
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+   <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,400;0,500;1,400&display=swap"
+      rel="stylesheet" />
 </head>
 
 <body>
-    <section class="catalog">
-        <div class="container">
-            <div class="header">
-                <div class="header__menu">
-                    <div class="header__menu-close">
-                        <span></span>
-                        <span></span>
-                    </div>
-                    <nav class="header__menu-nav">
-                        <ul>
-                            <li>
-                                <a href="#" class="header__menu-link">catalog</a>
-                            </li>
-                            <li>
-                                <a href="#" class="header__menu-link">blog</a>
-                            </li>
-                            <li>
-                                <a href="#" class="header__menu-link">about</a>
-                            </li>
-                        </ul>
+   <section class="catalog">
+      <div class="container">
+         <div class="header">
+            <div class="header__menu">
+               <div class="header__menu-close">
+                  <span></span>
+                  <span></span>
+               </div>
+               <nav class="header__menu-nav">
+                  <ul>
+                     <li>
+                        <a href="catalog.html" class="header__menu-link">catalog</a>
+                     </li>
+                     <li>
+                        <a href="blog.html" class="header__menu-link">blog</a>
+                     </li>
+                     <li>
+                        <a href="about.html" class="header__menu-link">about</a>
+                     </li>
+                  </ul>
 
-                    </nav>
-                </div>
-                <div class="header__top">
-                    <div class="burger">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </div>
-                    <a href="#" class="header__logo">
-                        <img src="/src/logo/logo.png" alt="logo">
-                    </a>
-                    <div class="header__icons">
-                        <a class="icon-search" href="#"></a>
-                        <a class="icon-shopping-bag" href="#"></a>
-                    </div>
-                </div>
-                <nav class="header__nav">
-                    <ul>
-                        <li>
-                            <a href="#" class="header__link">
-                                catalog
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="header__link">
-                                blog
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="header__link">
-                                about
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
+               </nav>
             </div>
-
-            <h1 class="title-h1 catalog__title">our pottery</h1>
-
-            <div class="catalog__tabs">
-                <button class="catalog__tab catalog__tab-active">for tea</button>
-                <button class="catalog__tab">for kitchen</button>
-                <button class="catalog__tab">for plants</button>
+            <div class="header__top">
+               <div class="burger">
+                  <span></span>
+                  <span></span>
+                  <span></span>
+               </div>
+               <a href="index.html" class="header__logo">
+                  <img src="/src/logo/logo.png" alt="logo">
+               </a>
+               <div class="header__icons">
+                  <a class="icon-search" href="#"></a>
+                  <a class="icon-shopping-bag" href="#"></a>
+               </div>
             </div>
+            <nav class="header__nav">
+               <ul>
+                  <li>
+                     <a href="#" class="header__link">
+                        catalog
+                     </a>
+                  </li>
+                  <li>
+                     <a href="#" class="header__link">
+                        blog
+                     </a>
+                  </li>
+                  <li>
+                     <a href="#" class="header__link">
+                        about
+                     </a>
+                  </li>
+               </ul>
+            </nav>
+         </div>
 
-            <div class="catalog__content">
-                <div class="catalog__content-item">1</div>
-                <div class="catalog__content-item">2</div>
-                <div class="catalog__content-item">3</div>
+         <h1 class="title-h1 catalog__title">our pottery</h1>
+
+         <div class="catalog__tabs">
+            <button class="catalog__tab catalog__tab-active">for tea</button>
+            <button class="catalog__tab">for kitchen</button>
+            <button class="catalog__tab">for plants</button>
+         </div>
+
+         <div class="catalog__content">
+            <div class="catalog__content-item">
+               <div class="catalog__cards">
+                  <a class="catalog__card" href="#">
+                     <img class="catalog__card-img" src="src/img/cards/tea-card-1.png" alt="tea-card-1">
+                     <div class="catalog__card-title-wrapper">
+                        <h2 class="catalog__card-title title-card-h2">Terracotta Whisper</h2>
+                        <p class="catalog__card-price title-card-h2">19.99 €</p>
+                     </div>
+                  </a>
+                  <a class="catalog__card" href="#">
+                     <img class="catalog__card-img" src="src/img/cards/tea-card-2.png" alt="tea-card-2">
+                     <div class="catalog__card-title-wrapper">
+                        <h2 class="catalog__card-title title-card-h2">Clay Bloom</h2>
+                        <p class="catalog__card-price title-card-h2">24.99 €</p>
+                     </div>
+                  </a>
+                  <a class="catalog__card" href="#">
+                     <img class="catalog__card-img" src="src/img/cards/tea-card-3.png" alt="tea-card-3">
+                     <div class="catalog__card-title-wrapper">
+                        <h2 class="catalog__card-title title-card-h2">Earthen Grace</h2>
+                        <p class="catalog__card-price title-card-h2">16.99 €</p>
+                     </div>
+                  </a>
+                  <a class="catalog__card" href="#">
+                     <img class="catalog__card-img" src="src/img/cards/tea-card-4.png" alt="tea-card-4">
+                     <div class="catalog__card-title-wrapper">
+                        <h2 class="catalog__card-title title-card-h2">Moss & Moon</h2>
+                        <p class="catalog__card-price title-card-h2">21.99 €</p>
+                     </div>
+                  </a>
+                  <a class="catalog__card" href="#">
+                     <img class="catalog__card-img" src="src/img/cards/tea-card-1.png" alt="tea-card-1">
+                     <div class="catalog__card-title-wrapper">
+                        <h2 class="catalog__card-title title-card-h2">Solace Set</h2>
+                        <p class="catalog__card-price title-card-h2">29.99 €</p>
+                     </div>
+                  </a>
+               </div>
             </div>
-        </div>
-    </section>
-
-    <footer class="footer">
-        <div class="container">
-            <div class="footer__wrap">
-                <div class="footer__block-one">
-                    <h4 class="title-footer-h4">newsletter</h4>
-                    <p class="footer__subtitle">
-                        Keep up to date with news and promotions
-                    </p>
-                    <form action="#" class="footer__input">
-                        <input class="footer__form" type="email" required name="email"
-                            placeholder="Enter your e-mail" />
-                        <label class="footer__label form__label form__ceck-block " for="checkbox">
-                            <input required class="form__checkbox footer__checkbox" id="checkbox" type="checkbox">
-                            I agree with the <a href="#">terms</a>
-                        </label>
-                        <button class="btn-submit">submit</button>
-                    </form>
-                </div>
-                <div class="pure-g footer__wrapper">
-                    <div class="pure-u-1-4 pure-u-md-1-5 footer__wrapper-item">
-                        <h4 class="title-footer-h4">discover</h4>
-                        <ul class="footer__wrapper-list">
-                            <li>
-                                <a href="#">About Us</a>
-                            </li>
-                            <li>
-                                <a href="#">Blog</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="pure-u-1-4 pure-u-md-1-5 footer__wrapper-item">
-                        <h4 class="title-footer-h4">shopping</h4>
-                        <ul class="footer__wrapper-list">
-                            <li>
-                                <a href="#">Catalog</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="pure-u-1-1 pure-u-md-1-5 footer__wrapper-item footer__mod">
-                        <h4 class="title-footer-h4">information</h4>
-                        <ul class="footer__wrapper-list">
-                            <li>
-                                <a href="#">Terms and Conditions</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="pure-u-1-1 pure-u-md-2-5 footer__wrapper-item footer__mod">
-                        <h4 class="title-footer-h4">follow us</h4>
-                        <ul class="footer__wrapper-social-link">
-                            <li>
-                                <a class="icon-facebook" href="#"></a>
-                            </li>
-                            <li>
-                                <a class="icon-instagram" href="#"></a>
-                            </li>
-                            <li>
-                                <a class="icon-pinterest-circled" href="#"></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
+            <div class="catalog__content-item">
+               <div class="catalog__cards">
+                  <a class="catalog__card" href="#">
+                     <img class="catalog__card-img" src="src/img/cards/tea-card-2.png" alt="tea-card-2">
+                     <div class="catalog__card-title-wrapper">
+                        <h2 class="catalog__card-title title-card-h2">Clay Bloom</h2>
+                        <p class="catalog__card-price title-card-h2">24.99 €</p>
+                     </div>
+                  </a>
+                  <a class="catalog__card" href="#">
+                     <img class="catalog__card-img" src="src/img/cards/tea-card-3.png" alt="tea-card-3">
+                     <div class="catalog__card-title-wrapper">
+                        <h2 class="catalog__card-title title-card-h2">Earthen Grace</h2>
+                        <p class="catalog__card-price title-card-h2">16.99 €</p>
+                     </div>
+                  </a>
+                  <a class="catalog__card" href="#">
+                     <img class="catalog__card-img" src="src/img/cards/tea-card-4.png" alt="tea-card-4">
+                     <div class="catalog__card-title-wrapper">
+                        <h2 class="catalog__card-title title-card-h2">Moss & Moon</h2>
+                        <p class="catalog__card-price title-card-h2">21.99 €</p>
+                     </div>
+                  </a>
+                  <a class="catalog__card" href="#">
+                     <img class="catalog__card-img" src="src/img/cards/tea-card-1.png" alt="tea-card-1">
+                     <div class="catalog__card-title-wrapper">
+                        <h2 class="catalog__card-title title-card-h2">Solace Set</h2>
+                        <p class="catalog__card-price title-card-h2">29.99 €</p>
+                     </div>
+                  </a>
+               </div>
             </div>
-            <p class="footer__info">
-                © Copyright 2025, Ceramic soul
-            </p>
-        </div>
-    </footer>
+            <div class="catalog__content-item">
+               <div class="catalog__cards">
+                  <a class="catalog__card" href="#">
+                     <img class="catalog__card-img" src="src/img/cards/tea-card-3.png" alt="tea-card-3">
+                     <div class="catalog__card-title-wrapper">
+                        <h2 class="catalog__card-title title-card-h2">Earthen Grace</h2>
+                        <p class="catalog__card-price title-card-h2">16.99 €</p>
+                     </div>
+                  </a>
+                  <a class="catalog__card" href="#">
+                     <img class="catalog__card-img" src="src/img/cards/tea-card-1.png" alt="tea-card-1">
+                     <div class="catalog__card-title-wrapper">
+                        <h2 class="catalog__card-title title-card-h2">Terracotta Whisper</h2>
+                        <p class="catalog__card-price title-card-h2">19.99 €</p>
+                     </div>
+                  </a>
+                  <a class="catalog__card" href="#">
+                     <img class="catalog__card-img" src="src/img/cards/tea-card-2.png" alt="tea-card-2">
+                     <div class="catalog__card-title-wrapper">
+                        <h2 class="catalog__card-title title-card-h2">Clay Bloom</h2>
+                        <p class="catalog__card-price title-card-h2">24.99 €</p>
+                     </div>
+                  </a>
+                  <a class="catalog__card" href="#">
+                     <img class="catalog__card-img" src="src/img/cards/tea-card-4.png" alt="tea-card-4">
+                     <div class="catalog__card-title-wrapper">
+                        <h2 class="catalog__card-title title-card-h2">Moss & Moon</h2>
+                        <p class="catalog__card-price title-card-h2">21.99 €</p>
+                     </div>
+                  </a>
+                  <a class="catalog__card" href="#">
+                     <img class="catalog__card-img" src="src/img/cards/tea-card-1.png" alt="tea-card-1">
+                     <div class="catalog__card-title-wrapper">
+                        <h2 class="catalog__card-title title-card-h2">Solace Set</h2>
+                        <p class="catalog__card-price title-card-h2">29.99 €</p>
+                     </div>
+                  </a>
+               </div>
+            </div>
+         </div>
+      </div>
+   </section>
+
+   <footer class="footer">
+      <div class="container">
+         <div class="footer__wrap">
+            <div class="footer__block-one">
+               <h4 class="title-footer-h4">newsletter</h4>
+               <p class="footer__subtitle">
+                  Keep up to date with news and promotions
+               </p>
+               <form action="#" class="footer__input">
+                  <input class="footer__form" type="email" required name="email" placeholder="Enter your e-mail" />
+                  <label class="footer__label form__label form__ceck-block " for="checkbox">
+                     <input required class="form__checkbox footer__checkbox" id="checkbox" type="checkbox">
+                     I agree with the <a href="#">terms</a>
+                  </label>
+                  <button class="btn-submit">submit</button>
+               </form>
+            </div>
+            <div class="pure-g footer__wrapper">
+               <div class="pure-u-1-4 pure-u-md-1-5 footer__wrapper-item">
+                  <h4 class="title-footer-h4">discover</h4>
+                  <ul class="footer__wrapper-list">
+                     <li>
+                        <a href="about.html">About Us</a>
+                     </li>
+                     <li>
+                        <a href="blog.html">Blog</a>
+                     </li>
+                  </ul>
+               </div>
+               <div class="pure-u-1-4 pure-u-md-1-5 footer__wrapper-item">
+                  <h4 class="title-footer-h4">shopping</h4>
+                  <ul class="footer__wrapper-list">
+                     <li>
+                        <a href="#">Catalog</a>
+                     </li>
+                  </ul>
+               </div>
+               <div class="pure-u-1-1 pure-u-md-1-5 footer__wrapper-item footer__mod">
+                  <h4 class="title-footer-h4">information</h4>
+                  <ul class="footer__wrapper-list">
+                     <li>
+                        <a href="#">Terms and Conditions</a>
+                     </li>
+                  </ul>
+               </div>
+               <div class="pure-u-1-1 pure-u-md-2-5 footer__wrapper-item footer__mod">
+                  <h4 class="title-footer-h4">follow us</h4>
+                  <ul class="footer__wrapper-social-link">
+                     <li>
+                        <a class="icon-facebook" href="facebook.com"></a>
+                     </li>
+                     <li>
+                        <a class="icon-instagram" href="instagram.com"></a>
+                     </li>
+                     <li>
+                        <a class="icon-pinterest-circled" href="pinterest.com"></a>
+                     </li>
+                  </ul>
+               </div>
+            </div>
+         </div>
+         <p class="footer__info">
+            © Copyright 2025, Ceramic soul
+         </p>
+      </div>
+   </footer>
 
 
-    <script type="module" src="/src/js/script.js"></script>
+   <script type="module" src="/src/js/script.js"></script>
 </body>
 
 </html>
