--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                 <a href="catalog.html" class="header__menu-link">catalog</a>
               </li>
               <li>
-                <a href="#" class="header__menu-link">blog</a>
+                <a href="blog.html" class="header__menu-link">blog</a>
               </li>
               <li>
-                <a href="#" class="header__menu-link">about</a>
+                <a href="about.html" class="header__menu-link">about</a>
               </li>
             </ul>
 
@@ -45,7 +45,7 @@
             <span></span>
             <span></span>
           </div>
-          <a href="#" class="header__logo">
+          <a href="index.html" class="header__logo">
             <img src="/src/logo/logo.png" alt="logo">
           </a>
           <div class="header__icons">
@@ -61,12 +61,12 @@
               </a>
             </li>
             <li>
-              <a href="#" class="header__link">
+              <a href="blog.html" class="header__link">
                 blog
               </a>
             </li>
             <li>
-              <a href="#" class="header__link">
+              <a href="aobut.html" class="header__link">
                 about
               </a>
             </li>
@@ -194,8 +194,8 @@
           </p>
           <form action="#" class="footer__input">
             <input class="footer__form" type="email" required name="email" placeholder="Enter your e-mail" />
-            <label class="footer__label form__label form__ceck-block " for="checkbox">
-              <input required class="form__checkbox footer__checkbox" id="checkbox" type="checkbox">
+            <label class="footer__label form__label form__ceck-block " for="footer-checkbox">
+              <input required class="form__checkbox footer__checkbox" id="footer-checkbox" type="checkbox">
               I agree with the <a href="#">terms</a>
             </label>
             <button class="btn-submit">submit</button>
@@ -209,7 +209,7 @@
                 <a href="#">About Us</a>
               </li>
               <li>
-                <a href="#">Blog</a>
+                <a href="blog.html">Blog</a>
               </li>
             </ul>
           </div>
@@ -233,13 +233,13 @@
             <h4 class="title-footer-h4">follow us</h4>
             <ul class="footer__wrapper-social-link">
               <li>
-                <a class="icon-facebook" href="#"></a>
+                <a class="icon-facebook" href="facebook.com"></a>
               </li>
               <li>
-                <a class="icon-instagram" href="#"></a>
+                <a class="icon-instagram" href="instagram.com"></a>
               </li>
               <li>
-                <a class="icon-pinterest-circled" href="#"></a>
+                <a class="icon-pinterest-circled" href="pinterest.com"></a>
               </li>
             </ul>
           </div>
