added new file 'blog.html', and bags fixed

--- a/catalog.html
+++ b/catalog.html
@@ -55,17 +55,17 @@
             <nav class="header__nav">
                <ul>
                   <li>
-                     <a href="#" class="header__link">
+                     <a href="catalog.html" class="header__link">
                         catalog
                      </a>
                   </li>
                   <li>
-                     <a href="#" class="header__link">
+                     <a href="blog.html" class="header__link">
                         blog
                      </a>
                   </li>
                   <li>
-                     <a href="#" class="header__link">
+                     <a href="about.html" class="header__link">
                         about
                      </a>
                   </li>
