added new file 'about.html' and section about, bugs fixed

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               </a>
             </li>
             <li>
-              <a href="aobut.html" class="header__link">
+              <a href="about.html" class="header__link">
                 about
               </a>
             </li>
@@ -194,8 +194,8 @@
           </p>
           <form action="#" class="footer__input">
             <input class="footer__form" type="email" required name="email" placeholder="Enter your e-mail" />
-            <label class="footer__label form__label form__ceck-block " for="footer-checkbox">
-              <input required class="form__checkbox footer__checkbox" id="footer-checkbox" type="checkbox">
+            <label class="footer__label form__label form__ceck-block " for="checkbox">
+              <input required class="form__checkbox footer__checkbox" id="checkbox" type="checkbox">
               I agree with the <a href="#">terms</a>
             </label>
             <button class="btn-submit">submit</button>
@@ -206,7 +206,7 @@
             <h4 class="title-footer-h4">discover</h4>
             <ul class="footer__wrapper-list">
               <li>
-                <a href="#">About Us</a>
+                <a href="about.html">About Us</a>
               </li>
               <li>
                 <a href="blog.html">Blog</a>
@@ -233,13 +233,13 @@
             <h4 class="title-footer-h4">follow us</h4>
             <ul class="footer__wrapper-social-link">
               <li>
-                <a class="icon-facebook" href="facebook.com"></a>
+                <a class="icon-facebook" href="https://www.facebook.com"></a>
               </li>
               <li>
-                <a class="icon-instagram" href="instagram.com"></a>
+                <a class="icon-instagram" href="https://www.instagram.com"></a>
               </li>
               <li>
-                <a class="icon-pinterest-circled" href="pinterest.com"></a>
+                <a class="icon-pinterest-circled" href="https://www.pinterest.com"></a>
               </li>
             </ul>
           </div>
