--- a/catalog.html
+++ b/catalog.html
@@ -229,7 +229,7 @@
                   <h4 class="title-footer-h4">shopping</h4>
                   <ul class="footer__wrapper-list">
                      <li>
-                        <a href="#">Catalog</a>
+                        <a href="catalog.html">Catalog</a>
                      </li>
                   </ul>
                </div>
@@ -245,13 +245,13 @@
                   <h4 class="title-footer-h4">follow us</h4>
                   <ul class="footer__wrapper-social-link">
                      <li>
-                        <a class="icon-facebook" href="facebook.com"></a>
+                        <a class="icon-facebook" href="https://www.facebook.com"></a>
                      </li>
                      <li>
-                        <a class="icon-instagram" href="instagram.com"></a>
+                        <a class="icon-instagram" href="https://www.instagram.com"></a>
                      </li>
                      <li>
-                        <a class="icon-pinterest-circled" href="pinterest.com"></a>
+                        <a class="icon-pinterest-circled" href="https://www.pinterest.com"></a>
                      </li>
                   </ul>
                </div>
