--- a/about.html
+++ b/about.html
@@ -147,6 +147,19 @@
         </div>
     </section>
 
+    <section class="findeus">
+        <div class="container">
+            <h2 class="findeus__title title-h2">find us</h2>
+
+            <div class="findeus__wrapper">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7738.572194554065!2d-73.95382359503411!3d40.731736074290254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2593c58f8777d%3A0xe2215ac687bd7249!2sCLAY%20SPACE%20Ceramic%20Center!5e1!3m2!1suk!2sua!4v1745466485852!5m2!1suk!2sua"
+                    style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+    </section>
+
     <footer class="footer">
         <div class="container">
             <div class="footer__wrap">
